# graft

./: Cargo.toml  Cross.toml  README.md
.github/workflows/: build-stubs.yml  release.yml
crates/graft/: Cargo.toml
crates/graft-builder/: Cargo.toml
crates/graft-builder/src/: archive.rs  builder.rs  error.rs  lib.rs  main.rs
crates/graft-core/: Cargo.toml
crates/graft-core/src/: archive.rs  lib.rs  path_restrictions.rs
crates/graft-core/src/patch/: apply.rs  backup.rs  constants.rs  error.rs  mod.rs  validate.rs
crates/graft-core/src/utils/: manifest.rs
crates/graft-gui/: Cargo.toml
crates/graft-gui/assets/: AppIcon.icns
crates/graft-gui/src/: app.rs  cli.rs  gui.rs  main.rs  runner.rs  self_read.rs  validator.rs
crates/graft-icon/: Cargo.toml
crates/graft/examples/: convert_icon.rs
crates/graft/src/: lib.rs  main.rs  stubs.rs  targets.rs
crates/graft/src/commands/: build.rs  macos_bundle.rs  mod.rs  patch_apply.rs  patch_create.rs  patch_rollback.rs  patcher_create.rs  windows_icon.rs
docs/: GUI_PATCHER_PLAN.md  PATCH_SYSTEM.md  plan-platform-native-builds.md
src/: main.rs
src/commands/: calculate.rs  check.rs  compare.rs  diff_apply.rs  diff_create.rs  mod.rs  patch_apply.rs  patch_create.rs
src/patch/: apply.rs  mod.rs
src/utils/: diff.rs  dir_scan.rs  hash.rs  mod.rs  patch.rs
