[package]
name = "graft-builder"
version = "0.1.0"
edition = "2024"
description = "Build self-contained GUI patchers from graft patches"

[dependencies]
clap = { version = "4", features = ["derive"] }
tar = "0.4"
flate2 = "1.0"
graft-core = { path = "../graft-core" }

[dev-dependencies]
tempfile = "3"
