[package]
name = "graft-gui"
version = "0.1.0"
edition = "2024"

[features]
# This feature is enabled by graft-builder when generating a patcher with embedded patch data
embedded_patch = []

[dependencies]
rfd = "0.15"
tar = "0.4"
flate2 = "1.0"
tempfile = "3"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
graft-core = { path = "../graft-core" }

# Linux: Use wgpu (glow has X server issues)
[target.'cfg(target_os = "linux")'.dependencies]
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "wgpu", "wayland", "x11"] }

# Windows: Use glow (wgpu has MinGW/cross-compilation issues causing white text)
[target.'cfg(target_os = "windows")'.dependencies]
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }

# macOS: Use glow (safer default)
[target.'cfg(target_os = "macos")'.dependencies]
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
