[package]
name = "graft-gui"
version = "0.6.0"
edition = "2024"

[features]
# This feature is enabled by graft-builder when generating a patcher with embedded patch data
embedded_patch = []

[dependencies]
rfd = "0.16"
tar = "0.4"
flate2 = "1.0"
tempfile = "3.24"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
graft-core = { path = "../graft-core" }

# Linux: Use wgpu with vulkan + gles backends (gles works for network X11)
[target.'cfg(target_os = "linux")'.dependencies]
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "wgpu", "wayland", "x11"] }
wgpu = { version = "27", default-features = false, features = ["vulkan", "gles"] }

# Windows: Use glow (wgpu has MinGW/cross-compilation issues)
[target.'cfg(target_os = "windows")'.dependencies]
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "glow"] }

# macOS: Use glow (safer default)
[target.'cfg(target_os = "macos")'.dependencies]
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "glow"] }

# Windows: Build dependencies for icon embedding
[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"
image = "0.25"
ico = "0.3"
