[package]
name = "graft"
version = "0.3.0"
edition = "2024"

[features]
default = []
# Embed all platform stubs (for CI releases)
# Requires GRAFT_STUBS_DIR env var pointing to directory with all stubs
embedded-stubs = []

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
editpe = { version = "0.2", default-features = false, features = ["std", "images"] }
graft-core = { path = "../graft-core" }
icns = "0.3.1"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3.24"
